Fix Java 11 compatibility: replace Stream.toList() and use --release flag (#322)
Replace Stream.toList() (Java 16+) with Collectors.toList() in
JsonPathParser, which is in the base source set targeting Java 11.

Additionally, replace sourceCompatibility/targetCompatibility with
options.release for both compileJava (11) and compileJava17Java (17).
The --release flag enforces API-level compatibility at compile time,
preventing future use of APIs unavailable in the target Java version.

Fixes #320